--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^18.2.0",
-    "@google/genai": "^0.14.0",
-    "openai": "^4.52.7",
-    "@anthropic-ai/sdk": "^0.24.1",
-    "react": "^18.2.0"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "@google/genai": "^1.15.0",
+    "openai": "^5.15.0",
+    "@anthropic-ai/sdk": "^0.60.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
